Baru jadi mobile

--- a/index.html
+++ b/index.html
@@ -7,15 +7,44 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
-  Victor Crest
+  <!-- <div class="background">
+    <img src="images/bg-pattern-top.svg" alt="background" id="top">
+    <img src="images/bg-pattern-bottom.svg" alt="background" id="bottom">
+  </div> -->
+
+  <div class="card">
+    <section class="up">
+      <img src="images/bg-pattern-card.svg" alt="background pattern">
+    </section>
+    <div class="profileCard">
+      <img src="images/image-victor.jpg" alt="">
+    </div>
+    <section class="down">
+      <div class="name">
+        <h3>Victor Crest <span id="age">26</span></h3>
+        <p class="places">London</p>
+      </div>
+      <div class="followers">
+        <h3>80K</h3>
+        <p>Followers</p>
+      </div>
+      <div class="likes">
+        <h3>803K</h3>
+        <p>Likes</p>
+      </div>
+      <div class="photos">
+        <h3>1.4K</h3>
+        <p>Photos</p>
+      </div>
+    </section>
+  </div>
+
+  <!-- Victor Crest
   26
   London
 
@@ -30,6 +59,6 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
