--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   
 </head>
 <body>
-  <!-- <div class="background">
-    <img src="images/bg-pattern-top.svg" alt="background" id="top">
-    <img src="images/bg-pattern-bottom.svg" alt="background" id="bottom">
-  </div> -->
 
+  <div class="background">
+    <img src="images/bg-pattern-bottom.svg" alt="background" id="bottom">
+  </div>
   <div class="card">
     <section class="up">
       <img src="images/bg-pattern-card.svg" alt="background pattern">
